interpreterのコピー/parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 39
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On toplevel shift to state 44
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 45
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 1:
AExpr -> TRUE . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AExpr -> TRUE 
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On LPAREN reduce production AExpr -> TRUE 
-- On INTV reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ID reduce production AExpr -> TRUE 
-- On FALSE reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 

State 2:
AExpr -> LPAREN . Expr RPAREN [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 37
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 3:
LetExpr -> LET . ID EQ Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On ID shift to state 4

State 4:
LetExpr -> LET ID . EQ Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On EQ shift to state 5

State 5:
LetExpr -> LET ID EQ . Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 34
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 6:
AExpr -> INTV . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AExpr -> INTV 
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On LPAREN reduce production AExpr -> INTV 
-- On INTV reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ID reduce production AExpr -> INTV 
-- On FALSE reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 

State 7:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 29
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 8:
AExpr -> ID . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 

State 9:
FunExpr -> FUN . ID RARROW Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On ID shift to state 10

State 10:
FunExpr -> FUN ID . RARROW Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On RARROW shift to state 11

State 11:
FunExpr -> FUN ID RARROW . Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 28
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 12:
AExpr -> FALSE . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AExpr -> FALSE 
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On LPAREN reduce production AExpr -> FALSE 
-- On INTV reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ID reduce production AExpr -> FALSE 
-- On FALSE reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 

State 13:
LTExpr -> PExpr . LT PExpr [ THEN SEMISEMI RPAREN IN ELSE ]
LTExpr -> PExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS LT IN ELSE ]
-- On PLUS shift to state 14
-- On LT shift to state 21
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On IN reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 

State 14:
PExpr -> PExpr PLUS . MExpr [ THEN SEMISEMI RPAREN PLUS LT IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 12
-- On MExpr shift to state 15
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 15:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE ]
PExpr -> PExpr PLUS MExpr . [ THEN SEMISEMI RPAREN PLUS LT IN ELSE ]
-- On MULT shift to state 16
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On IN reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 

State 16:
MExpr -> MExpr MULT . AppExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 12
-- On AppExpr shift to state 17
-- On AExpr shift to state 19

State 17:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
MExpr -> MExpr MULT AppExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 12
-- On AExpr shift to state 18
-- On THEN reduce production MExpr -> MExpr MULT AppExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AppExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AppExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AppExpr 
-- On MULT reduce production MExpr -> MExpr MULT AppExpr 
-- On LT reduce production MExpr -> MExpr MULT AppExpr 
-- On IN reduce production MExpr -> MExpr MULT AppExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AppExpr 

State 18:
AppExpr -> AppExpr AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AppExpr -> AppExpr AExpr 
-- On THEN reduce production AppExpr -> AppExpr AExpr 
-- On SEMISEMI reduce production AppExpr -> AppExpr AExpr 
-- On RPAREN reduce production AppExpr -> AppExpr AExpr 
-- On PLUS reduce production AppExpr -> AppExpr AExpr 
-- On MULT reduce production AppExpr -> AppExpr AExpr 
-- On LT reduce production AppExpr -> AppExpr AExpr 
-- On LPAREN reduce production AppExpr -> AppExpr AExpr 
-- On INTV reduce production AppExpr -> AppExpr AExpr 
-- On IN reduce production AppExpr -> AppExpr AExpr 
-- On ID reduce production AppExpr -> AppExpr AExpr 
-- On FALSE reduce production AppExpr -> AppExpr AExpr 
-- On ELSE reduce production AppExpr -> AppExpr AExpr 

State 19:
AppExpr -> AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AppExpr -> AExpr 
-- On THEN reduce production AppExpr -> AExpr 
-- On SEMISEMI reduce production AppExpr -> AExpr 
-- On RPAREN reduce production AppExpr -> AExpr 
-- On PLUS reduce production AppExpr -> AExpr 
-- On MULT reduce production AppExpr -> AExpr 
-- On LT reduce production AppExpr -> AExpr 
-- On LPAREN reduce production AppExpr -> AExpr 
-- On INTV reduce production AppExpr -> AExpr 
-- On IN reduce production AppExpr -> AExpr 
-- On ID reduce production AppExpr -> AExpr 
-- On FALSE reduce production AppExpr -> AExpr 
-- On ELSE reduce production AppExpr -> AExpr 

State 20:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
MExpr -> AppExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 12
-- On AExpr shift to state 18
-- On THEN reduce production MExpr -> AppExpr 
-- On SEMISEMI reduce production MExpr -> AppExpr 
-- On RPAREN reduce production MExpr -> AppExpr 
-- On PLUS reduce production MExpr -> AppExpr 
-- On MULT reduce production MExpr -> AppExpr 
-- On LT reduce production MExpr -> AppExpr 
-- On IN reduce production MExpr -> AppExpr 
-- On ELSE reduce production MExpr -> AppExpr 

State 21:
LTExpr -> PExpr LT . PExpr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 12
-- On PExpr shift to state 22
-- On MExpr shift to state 23
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 22:
LTExpr -> PExpr LT PExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS IN ELSE ]
-- On PLUS shift to state 14
-- On THEN reduce production LTExpr -> PExpr LT PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr LT PExpr 
-- On RPAREN reduce production LTExpr -> PExpr LT PExpr 
-- On IN reduce production LTExpr -> PExpr LT PExpr 
-- On ELSE reduce production LTExpr -> PExpr LT PExpr 

State 23:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE ]
PExpr -> MExpr . [ THEN SEMISEMI RPAREN PLUS LT IN ELSE ]
-- On MULT shift to state 16
-- On THEN reduce production PExpr -> MExpr 
-- On SEMISEMI reduce production PExpr -> MExpr 
-- On RPAREN reduce production PExpr -> MExpr 
-- On PLUS reduce production PExpr -> MExpr 
-- On LT reduce production PExpr -> MExpr 
-- On IN reduce production PExpr -> MExpr 
-- On ELSE reduce production PExpr -> MExpr 

State 24:
Expr -> LetExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> LetExpr 
-- On SEMISEMI reduce production Expr -> LetExpr 
-- On RPAREN reduce production Expr -> LetExpr 
-- On IN reduce production Expr -> LetExpr 
-- On ELSE reduce production Expr -> LetExpr 

State 25:
Expr -> LTExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> LTExpr 
-- On SEMISEMI reduce production Expr -> LTExpr 
-- On RPAREN reduce production Expr -> LTExpr 
-- On IN reduce production Expr -> LTExpr 
-- On ELSE reduce production Expr -> LTExpr 

State 26:
Expr -> IfExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> IfExpr 
-- On SEMISEMI reduce production Expr -> IfExpr 
-- On RPAREN reduce production Expr -> IfExpr 
-- On IN reduce production Expr -> IfExpr 
-- On ELSE reduce production Expr -> IfExpr 

State 27:
Expr -> FunExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> FunExpr 
-- On SEMISEMI reduce production Expr -> FunExpr 
-- On RPAREN reduce production Expr -> FunExpr 
-- On IN reduce production Expr -> FunExpr 
-- On ELSE reduce production Expr -> FunExpr 

State 28:
FunExpr -> FUN ID RARROW Expr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production FunExpr -> FUN ID RARROW Expr 
-- On SEMISEMI reduce production FunExpr -> FUN ID RARROW Expr 
-- On RPAREN reduce production FunExpr -> FUN ID RARROW Expr 
-- On IN reduce production FunExpr -> FUN ID RARROW Expr 
-- On ELSE reduce production FunExpr -> FUN ID RARROW Expr 

State 29:
IfExpr -> IF Expr . THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN shift to state 30

State 30:
IfExpr -> IF Expr THEN . Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 31
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 31:
IfExpr -> IF Expr THEN Expr . ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On ELSE shift to state 32

State 32:
IfExpr -> IF Expr THEN Expr ELSE . Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 33
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 33:
IfExpr -> IF Expr THEN Expr ELSE Expr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On SEMISEMI reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On RPAREN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On IN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On ELSE reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 

State 34:
LetExpr -> LET ID EQ Expr . IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On IN shift to state 35

State 35:
LetExpr -> LET ID EQ Expr IN . Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 36
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 36:
LetExpr -> LET ID EQ Expr IN Expr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On SEMISEMI reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On RPAREN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On IN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On ELSE reduce production LetExpr -> LET ID EQ Expr IN Expr 

State 37:
AExpr -> LPAREN Expr . RPAREN [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On RPAREN shift to state 38

State 38:
AExpr -> LPAREN Expr RPAREN . [ TRUE THEN SEMISEMI RPAREN PLUS MULT LT LPAREN INTV IN ID FALSE ELSE ]
-- On TRUE reduce production AExpr -> LPAREN Expr RPAREN 
-- On THEN reduce production AExpr -> LPAREN Expr RPAREN 
-- On SEMISEMI reduce production AExpr -> LPAREN Expr RPAREN 
-- On RPAREN reduce production AExpr -> LPAREN Expr RPAREN 
-- On PLUS reduce production AExpr -> LPAREN Expr RPAREN 
-- On MULT reduce production AExpr -> LPAREN Expr RPAREN 
-- On LT reduce production AExpr -> LPAREN Expr RPAREN 
-- On LPAREN reduce production AExpr -> LPAREN Expr RPAREN 
-- On INTV reduce production AExpr -> LPAREN Expr RPAREN 
-- On IN reduce production AExpr -> LPAREN Expr RPAREN 
-- On ID reduce production AExpr -> LPAREN Expr RPAREN 
-- On FALSE reduce production AExpr -> LPAREN Expr RPAREN 
-- On ELSE reduce production AExpr -> LPAREN Expr RPAREN 

State 39:
LetExpr -> LET . ID EQ Expr IN Expr [ SEMISEMI ]
toplevel -> LET . ID EQ Expr SEMISEMI [ # ]
-- On ID shift to state 40

State 40:
LetExpr -> LET ID . EQ Expr IN Expr [ SEMISEMI ]
toplevel -> LET ID . EQ Expr SEMISEMI [ # ]
-- On EQ shift to state 41

State 41:
LetExpr -> LET ID EQ . Expr IN Expr [ SEMISEMI ]
toplevel -> LET ID EQ . Expr SEMISEMI [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FUN shift to state 9
-- On FALSE shift to state 12
-- On PExpr shift to state 13
-- On MExpr shift to state 23
-- On LetExpr shift to state 24
-- On LTExpr shift to state 25
-- On IfExpr shift to state 26
-- On FunExpr shift to state 27
-- On Expr shift to state 42
-- On AppExpr shift to state 20
-- On AExpr shift to state 19

State 42:
LetExpr -> LET ID EQ Expr . IN Expr [ SEMISEMI ]
toplevel -> LET ID EQ Expr . SEMISEMI [ # ]
-- On SEMISEMI shift to state 43
-- On IN shift to state 35

State 43:
toplevel -> LET ID EQ Expr SEMISEMI . [ # ]
-- On # reduce production toplevel -> LET ID EQ Expr SEMISEMI 

State 44:
toplevel' -> toplevel . [ # ]
-- On # accept toplevel

State 45:
toplevel -> Expr . SEMISEMI [ # ]
-- On SEMISEMI shift to state 46

State 46:
toplevel -> Expr SEMISEMI . [ # ]
-- On # reduce production toplevel -> Expr SEMISEMI 

